# ALT_LAS

./: .env  .env.example  .eslintrc.js  CHANGELOG.md  CHANGELOG_worker1.md  CUDA_Gelistirme_Ortami_Raporu.md  CUDA_Performans_Test_Plani.md  Dockerfile.dev  FEATURE_ROADMAP.md  GIT_LFS_NOTICE.md  GPU_On_Isitma_PoC_Dokumantasyonu.md  README.md  ai_orchestrator_locustfile.py  alt_las_analysis_report.md  architecture.md  code_quality_standards.md  comprehensive_recommendations.md  cuda_performance_dashboard.json  cuda_test.py  detailed_worker_roadmaps.md  docker-compose.yml  end_to_end_workflow_locustfile.py  enhanced_screen_capture.md  ilerleme_notu.md  license_analysis.md  license_recommendations.md  manus_push_test.txt  merge_plan.md  package.json  performance.ts  prioritization_strategy.md  progress_tracking_note.md  project_analysis_summary.md  project_review_findings.md  prometheus.yml  requirements-gpu.txt  roadmap.md  segmentation_service_locustfile.py  service_dir_contents.txt  todo.md  (+29 more)
Arayuz_Plani/: LICENSE  (+1 more)
ai-orchestrator/: Dockerfile  README.md  implementation_findings.md  implementation_summary.md  pyproject.toml  requirements.txt
ai-orchestrator/docs/: README.md  distributed_execution.md  model_orchestrator.md
ai-orchestrator/src/: main.py
ai-orchestrator/src/config/: settings.py
ai-orchestrator/src/core/: audio_integration.py  config.py  distributed.py  model_selection.py  optimization.py  orchestration.py
ai-orchestrator/src/models/: enhanced_model_manager.py  model.py  model_manager.py  vision.py
ai-orchestrator/src/schemas/: responses.py
ai-orchestrator/src/services/: audio_service.py  inference_service.py  model_manager.py  model_orchestrator.py  vision_service.py
ai-orchestrator/src/tests/: test_distributed.py  test_extended_model_manager.py  test_model_adapters.py
ai-orchestrator/tests/: test_enhanced_model_manager.py  test_llm_service.py  test_os_integration.py
ai-orchestrator/tests/unit/: test_config.py  test_llm_models.py  test_model_manager.py
os-integration-service/: .dockerignore  Cargo.toml  README.md
os-integration-service/src/: cross_platform.rs  error.rs  main.rs
os-integration-service/src/api/: filesystem.rs  mod.rs  process.rs  screenshot.rs
os-integration-service/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
os-integration-service/tests/: comprehensive_test.sh  test_new_features.py
runner-service/: Cargo.toml  Dockerfile  README.md  remaining_warnings.md
runner-service/src/: main.rs
runner-service/src/ai_service/: client.rs  mod.rs  processor.rs
runner-service/tests/: manual_verification.js
(+2040 files in other folders)
