[package]
name = "os_integration_service"
version = "0.1.0"
edition = "2024"
authors = ["İşçi 6 <isci6@altlas.com>"]
description = "ALT_LAS OS Integration Service - İşletim sistemi entegrasyonu için servis"
license = "MIT/Apache-2.0"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
env_logger = "0.11.2"
anyhow = "1.0.81"
thiserror = "1.0.57"
cfg-if = "1.0.0"
chrono = "0.4.31"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
core-foundation = "0.9.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.0"
