[package]
name = "runner-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
